--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -452,7 +452,7 @@ body, h1, h2, h3, h4, h5, h6, p, blockquote, pre, hr, dl, dd, ol, ul, figure { m
 body, html { overflow-x: hidden; }
 
 /** Basic styling */
-body { font: 500 18px/1.5 "latolight", Helvetica, Arial, sans-serif; color: #111; background-color: #fff; -webkit-text-size-adjust: 100%; -webkit-font-feature-settings: "kern" 1; -moz-font-feature-settings: "kern" 1; -o-font-feature-settings: "kern" 1; font-feature-settings: "kern" 1; font-kerning: normal; }
+body { font: 500 18.5px/1.7 "latolight", Helvetica, Arial, sans-serif; color: #111; background-color: #fff; -webkit-text-size-adjust: 100%; -webkit-font-feature-settings: "kern" 1; -moz-font-feature-settings: "kern" 1; -o-font-feature-settings: "kern" 1; font-feature-settings: "kern" 1; font-kerning: normal; }
 
 /** Set `margin-bottom` to maintain vertical rhythm */
 h1, h2, h3, h4, h5, h6, p, blockquote, pre, ul, ol, dl, figure, .highlight { margin-bottom: 15px; }
@@ -463,7 +463,7 @@ img { max-width: 100%; vertical-align: middle; }
 /** Figures */
 figure > img { display: block; }
 
-figcaption { font-size: 15.75px; }
+figcaption { font-size: 16.1875px; }
 
 /** Lists */
 ul, ol { margin-left: 30px; }
@@ -500,13 +500,13 @@ pre > code { border: 0; padding-right: 0; padding-left: 0; }
 .icon > svg path { fill: #1B1E1F; }
 
 /** Fonts on persistent elements **/
-h2, .contentnav li a, h5, .filter-group li, h6, .mobilemenu li a { font-family: "gentium_basicbold", Arial, sans-serif; }
+h2, .contentnav li a, h5, h3, .filter-group li, h6, .mobilemenu li a { font-family: "gentium_basicbold", Helvetica, Arial, sans-serif; }
 
-h1, .post-header h3 { font-family: "alegreyabold", Times, serif; }
+h1, .post-header h3 { font-family: "alegreyabold", Georgia, Times, serif; }
 
-.wrapperhead li a { font-family: "montserratregular", Times, serif; }
+.wrapperhead li a { font-family: "montserratregular", Georgia, Times, serif; }
 
-p strong, .chnum { font-family: "trattatelloregular", Times, serif; }
+p strong, .chnum { font-family: "trattatelloregular", Georgia, Times, serif; }
 
 /** Lists
 **/
@@ -637,22 +637,22 @@ ul { list-style: url("../img/curls-list-2.png"); padding: 0 0 0 10px; }
   #heading .cerchez-slider .slider .item .caption span.text { font-size: 1.5em; } }
 /** Side menu
 */
-#sidemenu .title { width: 220px; margin: 0 10px 10px 10px; }
-#sidemenu .index { width: 220px; margin: 20px 40px 20px 10px; padding: 20px 5px; border: 2px solid #cd1619; text-align: center; /*@include media-query($on-laptop) { width: 40%; float: left;
+#sidemenu .title { width: 240px; margin: 0 10px 10px 10px; }
+#sidemenu .index { width: 240px; margin: 20px 0 20px 10px; padding: 20px 5px; border: 2px solid #cd1619; text-align: center; /*@include media-query($on-laptop) { width: 40%; float: left;
 }*/ }
 #sidemenu .index a:hover { text-decoration: none; }
 #sidemenu .index h5 { color: #cd1619; margin: 0; font-size: 27px; }
-#sidemenu .download { width: 220px; margin: 20px 40px 20px 10px; padding: 10px 5px; border: 2px solid #cd1619; text-align: center; /*@include media-query($on-laptop) { width: 40%; float: left; h6{ font-size: 25px; }
+#sidemenu .download { width: 240px; margin: 20px 0 20px 10px; padding: 10px 5px; border: 2px solid #cd1619; text-align: center; /*@include media-query($on-laptop) { width: 40%; float: left; h6{ font-size: 25px; }
 }*/ }
-#sidemenu .download h6 { color: #cd1619; text-transform: uppercase; margin: 0; font-size: 18px; letter-spacing: 0.03em; }
+#sidemenu .download h6 { color: #cd1619; text-transform: uppercase; margin: 0; font-size: 20px; letter-spacing: 0.03em; }
 #sidemenu .download a:hover { text-decoration: none; }
 #sidemenu .contentnav { float: left; max-width: 60%; }
 #sidemenu .contentnav ul { padding: 0 0 0 10px; float: left; margin: 40px 0 0 0; list-style: none; }
 #sidemenu .contentnav ul li { list-style-type: none; padding: 5px 0 5px 0; font-size: 22px; }
 #sidemenu .contentnav ul li a { font-variant: small-caps; color: #1B1E1F; }
 #sidemenu .contentnav ul li a:hover { text-decoration: none; }
-#sidemenu .curls { float: right; margin: 0; }
-#sidemenu .curls img { max-width: 87px; }
+#sidemenu .curls { float: left; margin: 0; }
+#sidemenu .curls img { max-width: 95px; }
 @media screen and (max-width: 800px) { #sidemenu .title { padding: 0 0 20px 0; width: 300px; }
   #sidemenu .title, #sidemenu .download, #sidemenu .index { margin: 10px auto; }
   #sidemenu .contentnav, #sidemenu .curls { display: none; } }
@@ -683,14 +683,16 @@ ul { list-style: url("../img/curls-list-2.png"); padding: 0 0 0 10px; }
 .post .post-header .numwrapper .chnum { color: #cd1619; position: absolute; top: 26.5%; left: 48%; text-align: center; font-size: 50px; }
 .post .post-header .curlholder { width: 330px; margin: 0 auto; }
 .post .post-title { font-size: 8.5vw; margin-bottom: 0; letter-spacing: -1px; line-height: 1; color: #cd1619; text-align: center; text-transform: uppercase; }
-.post .post-content { margin-bottom: 30px; }
-.post .post-content h2 { font-size: 32px; color: #cd1619; font-variant: small-caps; }
-@media screen and (max-width: 800px) { .post .post-content h2 { font-size: 28px; } }
-.post .post-content h3 { font-size: 26px; }
-@media screen and (max-width: 800px) { .post .post-content h3 { font-size: 22px; } }
-.post .post-content h4 { font-size: 20px; }
+.post .post-content { margin-bottom: 30px; /*p:nth-of-type(3):first-letter{ font-family: $bold-font-family; float: left;  font-size: 75px;  line-height: 60px;  padding-top: 2px;  padding-right: 8px;  padding-left: 3px; 
+}*/ }
+.post .post-content h2 { font-size: 25px; color: #cd1619; font-variant: small-caps; margin-bottom: 0; }
+@media screen and (max-width: 800px) { .post .post-content h2 { font-size: 22px; } }
+.post .post-content h3 { font-size: 22px; text-transform: capitalize; padding-left: 45px; font-variant: small-caps; margin-bottom: 0; background: url("../img/curls-list-2.png") no-repeat left center; }
+@media screen and (max-width: 800px) { .post .post-content h3 { font-size: 18px; } }
+.post .post-content h4 { font-size: 18px; text-transform: capitalize; padding-left: 45px; font-variant: small-caps; margin-bottom: 0; background: url("../img/curls-list-2.png") no-repeat left center; }
 @media screen and (max-width: 800px) { .post .post-content h4 { font-size: 18px; } }
-.post .post-content p strong { color: #cd1619; }
+.post .post-content p strong { color: #cd1619; font-weight: normal; }
+.post .post-content h2#content-summary + p:first-letter, .post .post-content h2#content-summary + h3 + p:first-letter { font-family: "gentium_basicbold", Helvetica, Arial, sans-serif; float: left; font-size: 75px; line-height: 60px; padding-top: 2px; padding-right: 4px; padding-left: 3px; }
 .post .post-content p a, .post .post-content li a { color: #cd1619; text-decoration: none; }
 .post .post-content p a:hover, .post .post-content li a:hover { text-decoration: none; }
 .post .mobilemenu { display: none; width: 200px; margin: 0 auto; }
@@ -708,11 +710,17 @@ ul { list-style: url("../img/curls-list-2.png"); padding: 0 0 0 10px; }
 
 /** Browse Chapters at bottom of posts
 **/
-h5.browse { margin: 0 10px 20px 10px; padding: 10px 0 10px 0; text-transform: uppercase; border-bottom: 3px solid #cd1619; }
-
-a.browselink:hover { text-decoration: none; }
-
-img.chapterthumb, .thumb img { max-width: 150px; padding: 10px; }
+.browsech h5.browse { margin: 0 10px 20px 10px; padding: 10px 0 10px 0; text-transform: uppercase; border-bottom: 3px solid #cd1619; font-size: 28px; }
+.browsech .col-md-12 { margin-left: 40px; }
+.browsech .eachch { float: left; position: relative; }
+.browsech .eachch a.browselink:hover { text-decoration: none; }
+.browsech .eachch .chcurrent { position: absolute; bottom: 50px; left: 25px; background: rgba(250, 250, 250, 0.8); border-radius: 50px; color: #cd1619; text-align: center; }
+.browsech .eachch .chcurrent h5 { font-size: 30px; padding: 20px 0 0 0; margin: 0; font-family: "trattatelloregular", Georgia, Times, serif; }
+.browsech .eachch .chcurrent h4 { font-size: 20px; padding: 0 10px 10px 10px; font-family: "trattatelloregular", Georgia, Times, serif; }
+.browsech .eachch .ch { position: absolute; border-radius: 50px; bottom: 50px; left: 45px; font-family: "trattatelloregular", Georgia, Times, serif; color: #cd1619; line-height: 0.8em; font-size: 50px; background: rgba(250, 250, 250, 0.8); padding: 40px 20px 20px 20px; }
+.browsech .eachch img.chapterthumb, .browsech .eachch .thumb img { max-width: 160px; padding: 10px; }
+.browsech .bar { width: 20px; height: 170px; margin: 0 0 0 10px; }
+@media screen and (max-width: 600px) { .browsech h5.browse { font-size: 20px; } }
 
 /**
 * Index 
@@ -728,6 +736,10 @@ img.chapterthumb, .thumb img { max-width: 150px; padding: 10px; }
 .fullbook .content .chapterthumb img { float: left; }
 .fullbook .content a:hover { text-decoration: none; }
 
+/* strong text in opening paragraph */
+.fullbook p strong { font-family: "gentium_basicbold", Helvetica, Arial, sans-serif; font-variant: small-caps; color: #1B1E1F; font-weight: bolder; }
+
+/* isotope filter */
 .filter-group ul { margin: 30px 0 0 0; padding: 20px 0; border-bottom: 3px solid #1B1E1F; }
 .filter-group ul li { display: inline-block; list-style-type: none; cursor: pointer; }
 .filter-group ul li:hover { color: #cd1619; }
