--- a/_includes/sidemenu.html
+++ b/_includes/sidemenu.html
@@ -26,7 +26,7 @@
 			{% for n in nav %}
 
 
-				<li><a href="#{{ n | split: " "| join: "-" | downcase }}">{{ n }}</a></li>
+				<li><a href="#{{ n | replace: "?", "" | split: " " | join: "-" | downcase }}">{{ n }}</a></li>
 
 			{% endfor %}
 
