--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -7,15 +7,15 @@
 
 /*FONTS from css/font/stylesheet.css */
 $base-font-family: "latolight", Helvetica, Arial, sans-serif;
-$bold-font-family: "gentium_basicbold", Arial, sans-serif;
-$title-font-family: "alegreyabold", Times, serif; 
-$menu-font-family: "montserratregular", Times, serif; 
-$fancy-font-family: "trattatelloregular", Times, serif; 
+$bold-font-family: "gentium_basicbold", Helvetica, Arial, sans-serif;
+$title-font-family: "alegreyabold", Georgia, Times, serif; 
+$menu-font-family: "montserratregular", Georgia, Times, serif; 
+$fancy-font-family: "trattatelloregular", Georgia, Times, serif; 
 
-$base-font-size:   18px;
+$base-font-size:   18.5px;
 $base-font-weight: 500;
 $small-font-size:  $base-font-size * 0.875;
-$base-line-height: 1.5;
+$base-line-height: 1.7;
 
 $spacing-unit:     30px;
 
