--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,15 +17,25 @@
       {% if page.layout == "post" %}
         <div class="row">
 
-            <div class="col-md-3 col-sm-5">
-              {% include sidemenu.html %}
+            <div class="col-md-4 col-sm-4">
+              <div class="row">
+                <div class="col-md-1"></div>
+                <div class="col-md-11"> 
+                 {% include sidemenu.html %}
+                </div>
+              </div>
             </div>
 
             <div class="col-md-8 col-sm-8">
+              <div class="row">
+                <div class="col-md-11 col-sm-12">
+
                 {{ content }}
+                </div>
+                <div class="col-md-1"></div>
+              </div>
             </div>
 
-            <div class="col-md-1"></div>
         </div>
 
         {% include browsechapters.html %}
