--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -638,22 +638,20 @@ ul { list-style: url("../img/curls-list-2.png"); padding: 0 0 0 10px; }
 /** Side menu
 */
 #sidemenu .title { width: 240px; margin: 0 10px 10px 10px; }
-#sidemenu .index { width: 240px; margin: 20px 0 20px 10px; padding: 20px 5px; border: 2px solid #cd1619; text-align: center; /*@include media-query($on-laptop) { width: 40%; float: left;
-}*/ }
+#sidemenu .index { width: 240px; margin: 20px 0 20px 10px; padding: 20px 5px; border: 2px solid #cd1619; text-align: center; }
 #sidemenu .index a:hover { text-decoration: none; }
 #sidemenu .index h5 { color: #cd1619; margin: 0; font-size: 27px; }
-#sidemenu .download { width: 240px; margin: 20px 0 20px 10px; padding: 10px 5px; border: 2px solid #cd1619; text-align: center; /*@include media-query($on-laptop) { width: 40%; float: left; h6{ font-size: 25px; }
-}*/ }
+#sidemenu .download { width: 240px; margin: 20px 0 20px 10px; padding: 10px 5px; border: 2px solid #cd1619; text-align: center; }
 #sidemenu .download h6 { color: #cd1619; text-transform: uppercase; margin: 0; font-size: 20px; letter-spacing: 0.03em; }
 #sidemenu .download a:hover { text-decoration: none; }
 #sidemenu .contentnav { float: left; max-width: 60%; }
 #sidemenu .contentnav ul { padding: 0 0 0 10px; float: left; margin: 40px 0 0 0; list-style: none; }
-#sidemenu .contentnav ul li { list-style-type: none; padding: 5px 0 5px 0; font-size: 22px; }
+#sidemenu .contentnav ul li { list-style-type: none; padding: 5px 0 5px 0; font-size: 22px; line-height: 1.2em; }
 #sidemenu .contentnav ul li a { font-variant: small-caps; color: #1B1E1F; }
 #sidemenu .contentnav ul li a:hover { text-decoration: none; }
 #sidemenu .curls { float: left; margin: 0; }
 #sidemenu .curls img { max-width: 95px; }
-@media screen and (max-width: 800px) { #sidemenu .title { padding: 0 0 20px 0; width: 300px; }
+@media screen and (max-width: 850px) { #sidemenu .title { padding: 0 0 20px 0; width: 250px; }
   #sidemenu .title, #sidemenu .download, #sidemenu .index { margin: 10px auto; }
   #sidemenu .contentnav, #sidemenu .curls { display: none; } }
 @media screen and (max-width: 600px) { #sidemenu .title { padding: 0 0 20px 0; width: 280px; }
@@ -664,6 +662,8 @@ ul { list-style: url("../img/curls-list-2.png"); padding: 0 0 0 10px; }
 .site-footer { padding: 30px 0; border-top: 20px solid black; }
 .site-footer img { width: 20%; float: left; }
 .site-footer p { padding: 0 0 30px 30px; width: 70%; float: left; }
+.site-footer a { color: #cd1619; }
+.site-footer a:hover { text-decoration: none; color: #cd1619; }
 
 /** Page content */
 .page-content { padding: 30px 0; }
@@ -680,17 +680,18 @@ ul { list-style: url("../img/curls-list-2.png"); padding: 0 0 0 10px; }
 .post .post-header h3 { color: #cd1619; text-transform: uppercase; font-size: 35px; text-align: center; }
 .post .post-header .numwrapper { position: relative; width: 95%; margin: 0 auto; }
 .post .post-header .numwrapper .curlholder { width: 300px; margin: 0 auto; }
-.post .post-header .numwrapper .chnum { color: #cd1619; position: absolute; top: 26.5%; left: 48%; text-align: center; font-size: 50px; }
+.post .post-header .numwrapper .chnum { color: #cd1619; position: absolute; top: 23%; left: 48%; text-align: center; font-size: 50px; }
+.post .post-header .numwrapper .zerobig { top: 24%; left: 46%; }
+.post .post-header .numwrapper .zerobig img { width: 50px; }
 .post .post-header .curlholder { width: 330px; margin: 0 auto; }
-.post .post-title { font-size: 8.5vw; margin-bottom: 0; letter-spacing: -1px; line-height: 1; color: #cd1619; text-align: center; text-transform: uppercase; }
-.post .post-content { margin-bottom: 30px; /*p:nth-of-type(3):first-letter{ font-family: $bold-font-family; float: left;  font-size: 75px;  line-height: 60px;  padding-top: 2px;  padding-right: 8px;  padding-left: 3px; 
-}*/ }
+.post .post-title { font-size: 8vw; margin-bottom: 0; letter-spacing: -1px; line-height: 1; color: #cd1619; text-align: center; text-transform: uppercase; }
+.post .post-content { margin-bottom: 30px; }
 .post .post-content h2 { font-size: 25px; color: #cd1619; font-variant: small-caps; margin-bottom: 0; }
-@media screen and (max-width: 800px) { .post .post-content h2 { font-size: 22px; } }
+@media screen and (max-width: 850px) { .post .post-content h2 { font-size: 22px; } }
 .post .post-content h3 { font-size: 22px; text-transform: capitalize; padding-left: 45px; font-variant: small-caps; margin-bottom: 0; background: url("../img/curls-list-2.png") no-repeat left center; }
-@media screen and (max-width: 800px) { .post .post-content h3 { font-size: 18px; } }
+@media screen and (max-width: 850px) { .post .post-content h3 { font-size: 18px; } }
 .post .post-content h4 { font-size: 18px; text-transform: capitalize; padding-left: 45px; font-variant: small-caps; margin-bottom: 0; background: url("../img/curls-list-2.png") no-repeat left center; }
-@media screen and (max-width: 800px) { .post .post-content h4 { font-size: 18px; } }
+@media screen and (max-width: 850px) { .post .post-content h4 { font-size: 18px; } }
 .post .post-content p strong { color: #cd1619; font-weight: normal; }
 .post .post-content h2#content-summary + p:first-letter, .post .post-content h2#content-summary + h3 + p:first-letter { font-family: "gentium_basicbold", Helvetica, Arial, sans-serif; float: left; font-size: 75px; line-height: 60px; padding-top: 5px; padding-right: 4px; padding-left: 3px; }
 .post .post-content p a, .post .post-content li a { color: #cd1619; text-decoration: none; }
@@ -700,13 +701,18 @@ ul { list-style: url("../img/curls-list-2.png"); padding: 0 0 0 10px; }
 .post .mobilemenu ul li { font-variant: small-caps; padding: 5px 0; }
 .post .mobilemenu ul li a { color: #1B1E1F; font-size: 20px; }
 .post .mobilemenu ul li a:hover { text-decoration: none; color: #cd1619; }
-@media screen and (max-width: 800px) { .post .curlholder { padding: 20px 0 0 0; }
+@media screen and (max-width: 850px) { .post .curlholder { padding: 20px 0 0 0; }
   .post .mobilemenu { display: block; }
-  .post .post-title { font-size: 11vw; padding: 20px 0; }
+  .post .post-title { font-size: 7.5vw; padding: 20px 0; }
   .post .post-header { padding: 20px 0 0 0; }
   .post .post-header h3 { font-size: 23px; padding: 10px 0; }
-  .post .post-header .numwrapper .chnum { top: 25%; left: 46.5%; font-size: 40px; } }
-@media screen and (max-width: 600px) { .post .post-header .numwrapper .chnum { top: 27%; left: 47.5%; font-size: 20px; } }
+  .post .post-header .numwrapper .chnum { top: 25%; left: 46.5%; font-size: 40px; }
+  .post .post-header .numwrapper .chnum img { width: 80px; }
+  .post .post-header .numwrapper .zerobig { top: 21%; left: 46%; }
+  .post .post-header .numwrapper .zerobig img { width: 40px; } }
+@media screen and (max-width: 600px) { .post .post-header .numwrapper .chnum { top: 27%; left: 47.5%; font-size: 20px; }
+  .post .post-header .numwrapper .zerobig { top: 21%; left: 46%; }
+  .post .post-header .numwrapper .zerobig img { width: 30px; } }
 
 /** Browse Chapters at bottom of posts
 **/
@@ -718,6 +724,9 @@ ul { list-style: url("../img/curls-list-2.png"); padding: 0 0 0 10px; }
 .browsech .eachch .chcurrent h5 { font-size: 30px; padding: 20px 0 0 0; margin: 0; font-family: "trattatelloregular", Georgia, Times, serif; }
 .browsech .eachch .chcurrent h4 { font-size: 20px; padding: 0 10px 10px 10px; font-family: "trattatelloregular", Georgia, Times, serif; }
 .browsech .eachch .ch { position: absolute; border-radius: 50px; bottom: 50px; left: 45px; font-family: "trattatelloregular", Georgia, Times, serif; color: #cd1619; line-height: 0.8em; font-size: 50px; background: rgba(250, 250, 250, 0.8); padding: 40px 20px 20px 20px; }
+.browsech .eachch .ch img { width: 50px; }
+.browsech .eachch .zerosmall { left: 30px; padding-bottom: 10px; }
+.browsech .eachch .zerosmall img { width: 50px; }
 .browsech .eachch img.chapterthumb, .browsech .eachch .thumb img { max-width: 160px; padding: 10px; }
 .browsech .bar { width: 20px; height: 170px; margin: 0 0 0 10px; }
 @media screen and (max-width: 600px) { .browsech h5.browse { font-size: 20px; } }
