--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -173,10 +173,6 @@
             margin: 0;
             font-size: 27px;
         }
-        /*@include media-query($on-laptop) {
-            width: 40%;
-            float: left;
-        }*/
     }
 
     .download{
@@ -200,13 +196,6 @@
             }
 
         }
-        /*@include media-query($on-laptop) {
-            width: 40%;
-            float: left;
-            h6{
-                font-size: 25px;
-            }
-        }*/
     }
 
     .contentnav{
@@ -224,6 +213,7 @@
                 list-style-type: none;
                 padding: 5px 0 5px 0;
                 font-size: 22px;
+                line-height: 1.2em;
                 a{
                     font-variant: small-caps;
                     color: $black-color;
@@ -254,7 +244,7 @@
         .title{
 
             padding: 0 0 20px 0;
-            width: 300px;
+            width: 250px;
         }
         .title, .download, .index{
             margin: 10px auto;
@@ -299,6 +289,14 @@
         padding: 0 0 30px 30px ;
         width: 70%;
         float: left;
+    }
+
+    a{
+        color: $red-color;
+        &:hover{
+            text-decoration: none;
+            color: $red-color;
+        }
     }
 
 
@@ -362,10 +360,20 @@
             .chnum{
                 color: $red-color;
                 position: absolute;
-                top: 26.5%;
+                top: 23%;
                 left: 48%;
                 text-align: center;
                 font-size: 50px;
+
+ 
+            }
+
+            .zerobig{
+                top: 24%;
+                left: 46%;
+                img{
+                    width: 50px;
+                }
             }
         }
 
@@ -381,7 +389,7 @@
     
 
     .post-title {
-        font-size: 8.5vw;
+        font-size: 8vw;
         margin-bottom: 0;
         letter-spacing: -1px;
         line-height: 1;
@@ -447,18 +455,6 @@
             
         }
 
-        /*p:nth-of-type(3):first-letter{
-                font-family: $bold-font-family;
-                float: left; 
-                font-size: 75px; 
-                line-height: 60px; 
-                padding-top: 2px; 
-                padding-right: 8px; 
-                padding-left: 3px;
-            
-        }*/
-
-
 
         p a, li a{
             color: $red-color;
@@ -503,7 +499,7 @@
             display: block;
         }
         .post-title{
-            font-size: 11vw;
+            font-size: 7.5vw;
             padding: 20px 0;
         }
 
@@ -526,7 +522,22 @@
                     top: 25%;
                     left: 46.5%;
                     font-size: 40px;
+                
+                    img{
+                        width: 80px;
+                    }
                 }
+
+
+            .zerobig{
+                top: 21%;
+                left: 46%;
+                img{
+                    width: 40px;
+                }
+                }
+
+
             }
 
         }
@@ -546,6 +557,14 @@
                     top: 27%;
                     left: 47.5%;
                     font-size: 20px;
+                }
+
+                .zerobig{
+                    top: 21%;
+                    left: 46%;
+                    img{
+                        width: 30px;
+                    }
                 }
             }
 
@@ -622,7 +641,20 @@
             font-size: 50px;
             background: rgba(250,250,250,0.8);
             padding: 40px 20px 20px 20px;
+
+            img{
+                width: 50px;
+
+            }
     
+        }
+
+        .zerosmall{
+            left: 30px;
+            padding-bottom: 10px;
+            img{
+                width: 50px;
+            }
         }
 
         img.chapterthumb, .thumb img{
