--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -664,6 +664,7 @@ ul { list-style: url("../img/curls-list-2.png"); padding: 0 0 0 10px; }
 .site-footer p { padding: 0 0 30px 30px; width: 70%; float: left; }
 .site-footer a { color: #cd1619; }
 .site-footer a:hover { text-decoration: none; color: #cd1619; }
+@media screen and (max-width: 600px) { .site-footer p { font-size: 16px; } }
 
 /** Page content */
 .page-content { padding: 30px 0; }
@@ -737,6 +738,7 @@ ul { list-style: url("../img/curls-list-2.png"); padding: 0 0 0 10px; }
 **/
 /* title */
 .homehead .title { margin: 10px 0 50px 0; }
+@media screen and (max-width: 600px) { .homehead .title { margin-bottom: 10px; } }
 
 /* Full download */
 .fullbook .col-md-4 { padding-top: 20px; }
@@ -769,9 +771,11 @@ ul { list-style: url("../img/curls-list-2.png"); padding: 0 0 0 10px; }
 .grid .grid-item a h6:hover { color: #cd1619; text-decoration: none; }
 .grid .grid-item a h6.download { color: #cd1619; }
 .grid .grid-item a h6.download:hover { color: #1B1E1F; }
-@media screen and (max-width: 850px) { .grid .grid-item { max-height: 400px; }
+@media screen and (max-width: 850px) { .grid .grid-item { max-height: 450px; }
   .grid .grid-item a h6 { font-size: 18px; } }
-@media screen and (max-width: 600px) { .grid .grid-item { max-height: 200px; }
+@media screen and (max-width: 850px) and (orientation: landscape) { .grid .grid-item { max-height: 320px; }
+  .grid .grid-item a h6 { font-size: 12px; width: 40px; } }
+@media screen and (max-width: 600px) and (orientation: portrait) { .grid .grid-item { max-height: 200px; }
   .grid .grid-item a h6 { font-size: 12px; width: 40px; } }
 
 /** Syntax highlighting styles */
