Responsive CSS done; site now displays nicely across browsers and devices. Closes the-engine-room/responsible-data-handbook#15

--- a/_includes/browsechapters.html
+++ b/_includes/browsechapters.html
@@ -47,14 +47,19 @@
 
 						  		<h5 class="ch zerosmall"><img src="{{ "/assets/img/special-zero.png" | prepend: site.baseurl }}" /></h5>
 
+						  		<h4 class="zerosmall">You are here</h4>
+
+
 						  	{% else %}
 						
 						  
 								<h5>{{ post.ch }}</h5>
 
+								<h4>You are here</h4>
+
+
 							{% endif %}
 
-								<h4>You are here</h4>
 							</div>
 						</div>
 
