--- a/_includes/isotope.html
+++ b/_includes/isotope.html
@@ -37,14 +37,14 @@
 
 			<img src="{{ "/assets/img/chapter-0.png" | prepend: site.baseurl }}" />
 			
-			<a href="{{ "/assets/pdf/responsible-data-handbook.pdf" | prepend: site.baseurl }}" target="_blank"><h6>download</h6></a>
+			<a href="{{ "/assets/pdf/responsible-data-handbook.pdf" | prepend: site.baseurl }}" target="_blank"><h6 class="download">download</h6></a>
 
 		</div>
 
 		<div class="slideall slide grid-item">
 
 			<img src="{{ "/assets/img/chapter-0.png" | prepend: site.baseurl }}" />
-			<a href="{{ "/assets/slides/responsible-data-handbook.odp" | prepend: site.baseurl }}" target="_blank"><h6>download</h6></a>
+			<a href="{{ "/assets/slides/responsible-data-handbook.odp" | prepend: site.baseurl }}" target="_blank"><h6 class="download">download</h6></a>
 
 		</div>
 
@@ -61,7 +61,7 @@
 
 		  </a>
 		  
-		  <a href="{{ "/assets/pdf/" | prepend: site.baseurl }}{{ p.asset-link }}.pdf" target="_blank"><h6>download</h6></a>
+		  <a href="{{ "/assets/pdf/" | prepend: site.baseurl }}{{ p.asset-link }}.pdf" target="_blank"><h6 class="download">download</h6></a>
 
 
 		</div>
@@ -72,7 +72,7 @@
 
 		  <img class="img" title="{{ p.title }}" src="{{ "/assets/img/chapter-" | prepend: site.baseurl }}{{ p.num }}.png"/>
 
-		 <h6>download</h6></a>
+		 <h6 class="download">download</h6></a>
 
 		</div>
 
