--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -744,20 +744,21 @@ ul { list-style: url("../img/curls-list-2.png"); padding: 0 0 0 10px; }
 .fullbook .col-md-4 { padding-top: 20px; }
 .fullbook p strong { color: #cd1619; }
 .fullbook h5 { color: #cd1619; text-transform: uppercase; font-size: 20px; margin: 0 0 0 20px; padding-left: 20px; }
-.fullbook .link { float: left; height: 250px; padding: 5px 10px 0 0; }
+.fullbook img.link { float: left; height: 250px; padding: 5px 10px 0 0; }
 .fullbook .content .thumb img { float: left; max-width: 45%; padding: 0 10px 10px 10px; }
 .fullbook .content a:hover { text-decoration: none; }
 .fullbook p strong { font-family: "gentium_basicbold", Helvetica, Arial, sans-serif; font-variant: small-caps; color: #1B1E1F; font-weight: bolder; }
-@media screen and (max-width: 850px) { .fullbook .content { float: none; }
+@media screen and (max-width: 850px) { .fullbook img.link { height: 60vw; width: 30px; }
+  .fullbook .content { float: none; }
   .fullbook .content .thumb { float: none; }
   .fullbook .content .thumb img { float: none; max-width: 45%; } }
-@media screen and (max-width: 600px) { .fullbook .link { height: 200px; }
+@media screen and (max-width: 600px) { .fullbook img.link { height: 55vw; width: 25px; }
   .fullbook .content .thumb { float: none; }
   .fullbook .content .thumb img { max-width: 40%; }
   .fullbook .col-sm-6 p { padding-top: 10px; } }
 
 /* isotope filter */
-.filter-group ul { margin: 10px 0 0 0; padding: 20px 0; border-bottom: 3px solid #1B1E1F; }
+.filter-group ul { margin: 10px 0 15px 0; padding: 20px 0; border-bottom: 3px solid #1B1E1F; }
 .filter-group ul li { display: inline-block; list-style-type: none; cursor: pointer; font-size: 25px; }
 .filter-group ul li:hover { color: #cd1619; }
 .filter-group .active { color: #cd1619; }
