Responsive responsible data menu, other responsive improvements

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,7 +13,7 @@
 
         <nav id="menu" class="indicators ">
           <ul>
-            <li id="menu-item-139" class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-7 current_page_item menu-item-139"><a href="https://responsibledata.io/">Home</a></li>
+            <li id="menu-item-139" class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-7 menu-item-139"><a href="https://responsibledata.io/">Home</a></li>
             <li id="menu-item-153" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-153"><a href="https://responsibledata.io/about/">About</a></li>
             <li id="menu-item-204" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-204"><a href="https://responsibledata.io/events/">Events</a></li>
             <li id="menu-item-921" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-921"><a href="https://responsibledata.io/blog/">Blog</a></li>
