--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -3,78 +3,156 @@
  */
 .site-header {
     background-color: $black-color;
+    color: #fff; 
+    position: relative; 
+    z-index: 3; 
+    display: block;
+    .icon-arrow-down:before { 
+        content: "\e005"; }
+    
+    [class*="icon-"] { font-family: 'ThemeIcons'; speak: none; font-style: normal; font-variant: normal; text-transform: none; line-height: 1; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; }
+
+    #menuswitch{
+        display: none;
+
+    }
+
+
     .container{
         width: 960px;
         margin: 0 auto;
+        padding: 0;
     }
 
     #logo{
-        padding-left: 10px;
-        padding-right: 10px;
+    
+        padding: 0.86em;
         display: table-cell;
         vertical-align: middle;
         height: 4em;
-        padding: 1em;
+        padding: 0.86em 10px;
         position: relative;
-        h1 a{
+        h1{
+            margin-bottom: 0;
+
+        a{
             display: inline-block;
             img{
-                max-height: 3em;
+                height: 80px;
+
             }
-        }   
+        }  
+    }
     }
 
-    // Positioning context for the mobile navigation icon
-    position: relative;
 
     #menu{
         text-align: right;
         padding-right: 10px;
-        li{
-            display: inline-block;
+        ul{
+                display: block;
+                -webkit-margin-before: 0.86em;
+                -webkit-margin-after: 0.86em;
+                -webkit-margin-start: 0px;
+                -webkit-margin-end: 0px;
+                -webkit-padding-start: 85px;    
+    
 
-            a{
-                padding: 0.75em 1.5 em;
-                color: #fff;
-                text-decoration: none;
-                    -webkit-transition: all 0.2s ease;
-                    -moz-transition: all 0.2s ease;
-                    -ms-transition: all 0.2s ease;
-                    -o-transition: all 0.2s ease;
-                    transition: all 0.2s ease;
+            li{
+                display: inline-block;
+
+                a{
+                    font-size: 0.86em; 
+                    color: #fff; 
+                    text-decoration: none;
+                    text-transform: uppercase;
+                    padding: 0.75em 1.5 em;
+                        -webkit-transition: all 0.2s ease;
+                        -moz-transition: all 0.2s ease;
+                        -ms-transition: all 0.2s ease;
+                        -o-transition: all 0.2s ease;
+                        transition: all 0.2s ease;
+                }
             }
         }
     }
+
+    @media(max-width: 1010px) {
+        .container{
+            width: 720px;
+            img{
+                max-width: inherit;
+            }
+            #menu{
+                ul{
+                    li{
+                        a{
+                            font-size: 14px;
+                        }
+                    }
+                }
+            }
+        }
+
+    }
+
+    @media(max-width: 753px) {
+        .container{
+            width: 100%;
+        }
+        #menu{
+            display: none;
+        }
+        #logo{
+            display: table;
+            width: 100%;
+        }
+
+
+    }
+
+     @include media-query($on-palm) {
+        #logo{
+            img{
+                width: 240px;
+            }
+        }
+
+    }
+
 }
 
 
+
+
 /* header */
-#header { background-color: #1B1E1F; color: #fff; position: relative; z-index: 3; display: block; }
-#header #logo { padding: 1em; position: relative; }
+/*
 #header #logo h1 { margin-bottom: 0; margin-right: 1.25em; }
 #header #logo h1 a { display: inline-block; color: #fff; text-decoration: none; }
 #header #logo h1 a img { max-height: 3em; }
 #header #menu { display: none; }
-#header #menu ul { list-style: none; }
-#header #menu ul, #header #menu li { margin: 0; }
-#header #menu li a { padding: 1em 1em; color: #fff; text-decoration: none; }
-#header #menu ul li.current_page_item > a { color: #2ba8bd; }
-#header #menu .mini-menu-cart strong { font-weight: 400; }
+
+*/
 #header #menu.mobile { display: block; }
-#header #menu.mobile li { border-top: 1px solid #333; }
-#header #menu.mobile li a { display: block; font-size: 1.2em; }
+#header #menu.mobile li { border-top: 1px solid #333; display: block;}
+#header #menu.mobile li a { display: block; font-size: 0.86em; padding: 0.86em; }
 #header #menu.mobile li li a { padding-left: 2em; }
 #header #menu.mobile li li li a { padding-left: 3em; }
 #header #menu.mobile .mini-menu-cart em { display: none; }
 #header #menu.mobile .mini-menu-cart strong:before { font-weight: 400; content: '\00a0\2014\00a0'; }
 #header #menu.mobile .mini-menu-cart ul { display: none; }
-#header #menu .menu-item-language img.iclflag { position: relative; top: -0.1em; }
-#header #menu-switch { position: absolute; top: 50%; right: 0; width: 5em; height: 6em; margin-top: -3em; cursor: pointer; text-align: center; display: table; }
-#header #menu-switch:before { text-align: center; font-size: 1.5em; display: table-cell; vertical-align: middle; }
-#header #menu-switch:before { text-align: center; font-size: 1.5em; display: table-cell; vertical-align: middle; -webkit-transition: transform 0.3s ease; -moz-transition: transform 0.3s ease; -ms-transition: transform 0.3s ease; -o-transition: transform 0.3s ease; transition: transform 0.3s ease; }
-#header #menu-switch.on:before { -webkit-transform: rotate(180deg); -moz-transform: rotate(180deg); -ms-transform: rotate(180deg); -o-transform: rotate(180deg); transform: rotate(180deg); }
+#header #menu.mobile ul { list-style: none; display: block; -webkit-padding-start: 0; -webkit-padding-start: 0; text-align: left;}
+#header #menu.mobile ul, #header #menu li { margin: 0; }
+#header #menu.mobile ul li.current_page_item > a { color: #2ba8bd; }
+#header #menu.mobile .mini-menu-cart strong { font-weight: 400; }
 
+#header #menuswitch { position: absolute; top: 50%; right: 0; width: 5em; height: 6em; margin-top: -3em; cursor: pointer; text-align: center; display: table; }
 
+#header #menuswitch:before { text-align: center; font-size: 1.29em; display: table-cell; vertical-align: middle; }
+#header #menuswitch:before { text-align: center; font-size: 1.29em; display: table-cell; vertical-align: middle; -webkit-transition: transform 0.3s ease; -moz-transition: transform 0.3s ease; -ms-transition: transform 0.3s ease; -o-transition: transform 0.3s ease; transition: transform 0.3s ease; }
+#header #menuswitch.on:before { top: 15%; -webkit-transform: rotate(180deg); -moz-transform: rotate(180deg); -ms-transform: rotate(180deg); -o-transform: rotate(180deg); transform: rotate(180deg); }
+
+/*
 #heading { position: relative; z-index: 2; }
 #heading .bar, .thumb .bar { position: absolute; left: 0; bottom: -1px; width: 100%; height: 0.5em; z-index: 98; }
 #heading .bar:before, #heading .bar:after, .thumb .bar:before, .thumb .bar:after { content:''; position: absolute; top: 0; width: 50%; height: 0; border-bottom: 0.5em solid #fff; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; -ms-box-sizing: border-box; box-sizing: border-box; }
@@ -83,22 +161,23 @@
 .thumb .bar:before, .thumb .bar:after { border-bottom-color: #f4f4f4; }
 .invert-colors .thumb .bar:before, .invert-colors .thumb .bar:after, .thumb .bar.white:before, .thumb .bar.white:after { border-bottom-color: #fff; }
 
-#header.current a{
-    color:#ff0200;
-}
+*/
 
-#header li a{
-    text-transform: uppercase;
-}
+
 
 @media (min-width: 768px) {
     #header .wrapper { display: table; width: 100%; }
-    #header #logo, #header #menu { display: table-cell; vertical-align: middle; height: 4em; }
+    #header #logo, #header #menu { display: table-cell; vertical-align: middle; height: 3.45em; }
     #header #logo { padding-left: 10px; padding-right: 10px; }
     #header #logo h1 { margin-right: 0; }
     #header #menu { text-align: right; padding-right: 10px; -ms-touch-action: none; }
     #header #menu li { display: inline-block; }
-    #header #menu li a { display: inline-block; padding: 0.5em 1em; -webkit-transition: all 0.2s ease; -moz-transition: all 0.2s ease; -ms-transition: all 0.2s ease; -o-transition: all 0.2s ease; transition: all 0.2s ease; }
+    #header #menu li a { display: inline-block; padding: 0.5em 1em; -webkit-transition: all 0.2s ease; -moz-transition: all 0.2s ease; -ms-transition: all 0.2s ease; -o-transition: all 0.2s ease; transition: all 0.2s ease; 
+        &:hover{
+            background-color: #090909;
+
+        }
+    }
     .no-touch #header #menu li a:hover { background-color: #090909; }
     #header #menu li.menu-item-has-children, #header #menu li.page_item_has_children, #header #menu li.menu-item-language, #header #menu li.mini-menu-cart { position: relative; }
     #header #menu li.menu-item-has-children ul, #header #menu li.page_item_has_children ul, #header #menu li.menu-item-language ul.submenu-languages, #header #menu li.mini-menu-cart ul { visibility: hidden; position: absolute; top: 100%; left: 0; z-index: 99; width: 12em; text-align: left; background-color: #090909; opacity: 0; -webkit-transition: all 0.2s ease; -moz-transition: all 0.2s ease; -ms-transition: all 0.2s ease; -o-transition: all 0.2s ease; transition: all 0.2s ease; }
@@ -135,15 +214,6 @@
     #heading .cerchez-slider .slider .item .caption span.text:after { border-left-width: 1em; border-right-width: 1em; border-top-width: 1em; bottom: -0.95em; margin-left: -1em; }
 }
 
-@media (min-width: 1024px) {
-    #header #menu li a { padding: 0.75em 1.5em; }
-    #header #menu li.menu-item-has-children ul a, #header #menu li.page_item_has_children ul a { padding: 0.6em 1.5em; }
-    #header #menu li.menu-item-has-children ul li:last-child a, #header #menu li.page_item_has_children ul li:last-child a { padding-bottom: 1.5em; }
-    #header #menu li.mini-menu-cart ul a { padding: 0.75em 1.25em 0.75em 0.75em ; }
-    #header #menu li.mini-menu-cart ul li:last-child a { padding-bottom: 0.75em; }
-
-    #heading .cerchez-slider .slider .item .caption span.text { font-size: 1.5em; }
-}
 
 /**
     * Side menu
@@ -363,10 +433,11 @@
             }
 
             .chnum{
+                width: 100px;
                 color: $red-color;
                 position: absolute;
                 top: 23%;
-                left: 48%;
+                left: 43%;
                 text-align: center;
                 font-size: 50px;
 
@@ -374,8 +445,8 @@
             }
 
             .zerobig{
-                top: 24%;
-                left: 46%;
+                top: 23%;
+                left: 43%;
                 img{
                     width: 50px;
                 }
@@ -525,8 +596,10 @@
                 .chnum{
 
                     top: 25%;
-                    left: 46.5%;
+                    left: 42%;
                     font-size: 40px;
+                    width: 100px;
+
                 
                     img{
                         width: 80px;
@@ -536,7 +609,7 @@
 
             .zerobig{
                 top: 21%;
-                left: 46%;
+                left: 40%;
                 img{
                     width: 40px;
                 }
@@ -558,15 +631,15 @@
 
 
                 .chnum{
-
+                    width: 100px;
                     top: 27%;
-                    left: 47.5%;
+                    left: 35%;
                     font-size: 20px;
                 }
 
                 .zerobig{
                     top: 21%;
-                    left: 46%;
+                    left: 35%;
                     img{
                         width: 30px;
                     }
@@ -806,6 +879,7 @@
 /* isotope filter */
 
 .filter-group{
+        font-size: 25px;
 
     ul{
         margin: 10px 0 15px 0;
@@ -815,12 +889,11 @@
             display: inline-block;
             list-style-type: none;
             cursor: pointer;
-            font-size:25px;
-
+            font-size: 25px;
             &:hover{
                 color: $red-color;
             }
-        }
+        }   
     }
 
     .active{
@@ -828,7 +901,9 @@
     }
 
     @include media-query($on-laptop) {
-
+        
+        font-size: 22px;
+        
         ul{
 
             li{
@@ -840,7 +915,8 @@
 
 
     @include media-query($on-palm) {
-
+ 
+        font-size: 18px;
 
         ul{
             padding: 10px 0;
@@ -863,6 +939,24 @@
         height: 450px; 
         padding: 5px 10px 30px 10px;
         margin: 0 10px;
+
+        .overlay{
+            z-index: 1000;
+            position: absolute;
+            left: 20%;
+            top: 20%;
+            h3{
+                font-family: $fancy-font-family;
+                font-size: 80px;
+                line-height: 1em;
+                text-transform: capitalize;
+                padding: 30px 10px;
+                color: $red-color;
+                border-radius: 50px;
+
+                background-color: rgba(250,250,250,0.8);
+            }
+        }
 
         img{
             max-height: 400px;
@@ -904,9 +998,11 @@
 
     @include media-query($on-laptop) {
         .grid-item{ 
-            max-height: 450px;
+            max-height: 400px;
         
-
+            img{
+                max-height: 360px;
+            }
             a{
                 h6{
                     font-size: 18px;
@@ -919,6 +1015,10 @@
         .grid-item{ 
         
             max-height: 320px;
+
+            img{
+                max-height: 300px;
+            }
 
             a{
                 h6{
