--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -12,8 +12,9 @@ $title-font-family: "alegreyabold", Georgia, Times, serif;
 $menu-font-family: "montserratregular", Georgia, Times, serif; 
 $fancy-font-family: "trattatelloregular", Georgia, Times, serif; 
 
-$base-font-size:   18.5px;
+$base-font-size:   16px;
 $base-font-weight: 500;
+$body-font-size: $base-font-size * 1.15625;
 $small-font-size:  $base-font-size * 0.875;
 $base-line-height: 1.7;
 
@@ -22,7 +23,6 @@ $spacing-unit:     30px;
 $text-color:       #111;
 $background-color: #fff;
 $brand-color:      #2a7ae2;
-
 $red-color:        #cd1619;
 $black-color: 	   #1B1E1F;
 $grey-color:       #1B1E1F;
