Turning logo into a link -- yes it should be. Closes the-engine-room/responsible-data-handbook#13

--- a/_includes/sidemenu.html
+++ b/_includes/sidemenu.html
@@ -2,7 +2,7 @@
 
 
 		<div class="title">
-			<img src="{{ "/assets/img/title-2.png" | prepend: site.baseurl }}" />
+			<a href="{{ "/" | prepend: site.baseurl }}"><img src="{{ "/assets/img/title-2.png" | prepend: site.baseurl }}" /></a>
 		</div>
 
 
