--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -170,6 +170,9 @@
     .title{
         width: 240px;
         margin: 0 10px 10px 10px;
+        a:hover{
+            text-decoraton: none;
+        }
 
     }
 
